--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ asgiref==3.2.10
 certifi==2020.6.20
 chardet==3.0.4
 Django==3.0.7
+django-cors-headers==3.4.0
+-e git+https://github.com/makinacorpus/django-leaflet.git@581853a47d1c5da02b55c931082ac80b5b68e437#egg=django_leaflet
 idna==2.9
 pkg-resources==0.0.0
+psycopg2-binary==2.8.5
 pytz==2020.1
 requests==2.24.0
 sqlparse==0.3.1
